tests/ui/ext-nonexistent.rs
fn main() { iamnotanextensionthatexists!(""); }
//~^ ERROR cannot find macro `iamnotanextensionthatexists` in this scope
